--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@
     <nav class="navbar navbar-expand-lg fixed-top">
       <div class="container-fluid">
         <a class="navbar-brand" href="index.html">
-          <img src="./images/Logo.png" alt="Logo" class="brand-logo" />
+          <img src="./images/logo.png" alt="Logo" class="brand-logo" />
           ILMZAR
         </a>
         <div
@@ -300,7 +300,7 @@
           <div class="col-lg-2 col-xl-2 col-md-2 col-sm-6 mx-auto mt-3">
             <img
               class="footer-logo img-fluid"
-              src="images/Logo.png"
+              src="images/logo.png"
               alt="No Image Found"
             />
             <h4 class="footer-heading mt-2">ILMZAR</h4>
