--- a/contact.html
+++ b/contact.html
@@ -116,111 +116,66 @@
           </div>
         </div>
       </div>
-      <nav>
-        <div
-          class="container wow animate__animated animate__slideInDown"
-          data-wow-delay="0.5s"
-        >
-          <ol>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="courses.html">Courses</a></li>
-            <li><a href="gallery.html">Gallery</a></li>
-            <li><a href="contact.html" class="fw-bold active">Contact</a></li>
-          </ol>
-        </div>
-      </nav>
     </div>
     <!-- Breadcrumbs End -->
 
     <!-- Contact Us Start -->
     <div class="container py-5">
       <div class="row py-5 g-3">
-        <div
-          class="col-md-6 first_col wow animate__animated animate__zoomIn"
-          data-wow-delay="0.5s"
-        >
-          <h1
-            class="heading-title wow animate__animated animate__zoomIn"
-            data-wow-delay="0.5s"
-          >
+        <div class="col-12 col-md-6 wow animate__animated animate__zoomIn">
+          <h1 class="heading-title wow animate__animated animate__zoomIn">
             Contact Us
           </h1>
-          <form
-            class="p-4 mt-5 wow animate__animated animate__zoomIn"
-            data-wow-delay="0.7s"
-          >
+          <form class="p-4 mt-5 wow animate__animated animate__zoomIn">
             <div class="mb-3">
-              <label for="exampleFormControlInput1" class="form-label"
-                >Name:</label
-              >
-              <input
-                type="text"
-                class="form-control"
-                id="exampleFormControlInput1"
-              />
+              <label for="name" class="form-label">Name:</label>
+              <input type="text" class="form-control" id="name" />
             </div>
             <div class="mb-3">
-              <label for="exampleFormControlInput1" class="form-label"
-                >Email Address:</label
-              >
-              <input
-                type="text"
-                class="form-control"
-                id="exampleFormControlInput1"
-              />
+              <label for="email" class="form-label">Email Address:</label>
+              <input type="email" class="form-control" id="email" />
             </div>
             <div class="mb-3">
-              <label for="exampleFormControlTextarea1" class="form-label"
-                >Message:
-              </label>
-              <textarea
-                type="text"
-                class="form-control"
-                id="exampleFormControlTextarea1"
-                rows="3"
-              ></textarea>
+              <label for="message" class="form-label">Message:</label>
+              <textarea class="form-control" id="message" rows="3"></textarea>
             </div>
             <div class="mb-3">
               <button class="btn">Submit</button>
             </div>
           </form>
         </div>
-        <div
-          class="col-md-6 sec_col wow animate__animated animate__zoomIn"
-          data-wow-delay="0.1s"
-        >
-          <img src="./images/Contact-us.jpg" class="img-fluid" />
+        <div class="col-12 col-md-6 wow animate__animated animate__zoomIn">
+          <img
+            src="./images/Contact-us.jpg"
+            class="img-fluid"
+            alt="Contact Us"
+          />
         </div>
       </div>
-      <div
-        class="row-last wow animate__animated animate__zoomIn"
-        data-wow-delay="0.9s"
-      >
+      <div class="row row-last wow animate__animated animate__zoomIn">
         <div class="row row-cols-1 row-cols-md-3 p-3 text-white">
           <div class="col text-center">
-            <i class="fas fa-map-marker-alt"></i>
-            <h4>LOCATION</h4>
-            <p>
+            <i class="fas fa-map-marker-alt fa-2x"></i>
+            <h4 class="text">LOCATION</h4>
+            <p class="text">
               W2FH+FR6, Block 5-C Block 5 C Block 5 Nazimabad, Karachi, Karachi
               City, Sindh 74600, Pakistan
             </p>
           </div>
           <div class="col text-center">
-            <i class="fas fa-phone"></i>
-            <h4>CALL US</h4>
-            <p>021-123456789</p>
-            <p>+92 301 1234567</p>
+            <i class="fas fa-phone fa-2x"></i>
+            <h4 class="text">CALL US</h4>
+            <p class="text">021-123456789</p>
+            <p class="text">+92 301 1234567</p>
           </div>
           <div class="col text-center">
-            <i class="fas fa-envelope"></i>
-            <h4>Email</h4>
-            <p>info@ilmzar.com</p>
+            <i class="fas fa-envelope fa-2x"></i>
+            <h4 class="text">Email</h4>
+            <p class="text">info@ilmzar.com</p>
           </div>
         </div>
       </div>
     </div>
-    <!-- Contact Us End -->
 
     <!--Footer Start-->
     <div id="footer" class="container-fluid mt-5 pt-3 pb-3">
