--- a/index.html
+++ b/index.html
@@ -12,9 +12,12 @@
       referrerpolicy="no-referrer"
     />
     <!-- Google Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
     <!-- Bootstrap CDN -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -22,11 +25,11 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
-     <!-- Animate.css -->
+    <!-- Animate.css -->
     <link
-    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-    rel="stylesheet"
-  />
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+      rel="stylesheet"
+    />
     <!-- Custom CSS -->
     <link rel="stylesheet" href="./css/main.css" />
     <!-- Title Logo -->
@@ -82,7 +85,9 @@
           </div>
         </div>
         <div class="d-flex align-items-center">
-          <a href="signin.html" class="signin-button" target="_blank">Sign In</a>
+          <a href="signin.html" class="signin-button" target="_blank"
+            >Sign In</a
+          >
           <button
             class="navbar-toggler"
             type="button"
@@ -98,18 +103,24 @@
     </nav>
     <!-- NavBar End-->
 
-    <!-- Hero Section with Counter -->
+    <!-- Hero Section -->
     <section class="hero-section">
       <div class="container">
         <div class="row">
-          <div class="col-12 col-lg-6 order-lg-2 wow animate__animated animate__fadeInRightBig" data-wow-delay="0.9s">
+          <div
+            class="col-12 col-lg-6 order-lg-2 wow animate__animated animate__fadeInRightBig"
+            data-wow-delay="0.9s"
+          >
             <img
               src="images/hero.png"
               class="hero-img img-fluid"
               alt="Educational Resources"
             />
           </div>
-          <div class="col-12 col-lg-6 order-lg-1 wow animate__animated animate__fadeInLeftBig" data-wow-delay="0.5s">
+          <div
+            class="col-12 col-lg-6 order-lg-1 wow animate__animated animate__fadeInLeftBig"
+            data-wow-delay="0.5s"
+          >
             <h1 class="text-white fw-bold display-4">
               Bringing Quality Education to Your Doorstep
             </h1>
@@ -124,35 +135,23 @@
             <a href="about.html" class="btn">Learn More</a>
           </div>
         </div>
-        <div class="row mt-5 wow animate__animated animate__zoomIn" data-wow-delay="0.3s"">
-          <div class="col-md-4">
-            <div class="counter">
-              <h2 id="courses">0</h2>
-              <p>Courses</p>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="counter">
-              <h2 id="students">0</h2>
-              <p>Students</p>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="counter">
-              <h2 id="teachers">0</h2>
-              <p>Teachers</p>
-            </div>
-          </div>
-        </div>
       </div>
     </section>
-    <!-- Hero Section with Counter -->
+    <!-- Hero Section -->
 
     <!-- Team Member Start -->
     <div class="container mt-5">
-      <h1 class="heading-title wow animate__animated animate__zoomIn" data-wow-delay="0.3s">Meet Our Team</h1>
+      <h1
+        class="heading-title wow animate__animated animate__zoomIn"
+        data-wow-delay="0.3s"
+      >
+        Meet Our Team
+      </h1>
       <div class="row">
-        <div class="col-md-4 mb-4 wow animate__animated animate__zoomIn" data-wow-delay="0.5s">
+        <div
+          class="col-md-6 mb-4 wow animate__animated animate__zoomIn"
+          data-wow-delay="0.5s"
+        >
           <div class="card team-card">
             <img
               src="./images/teammember.png"
@@ -163,30 +162,18 @@
               <h4 class="card-title">Shahroze Ayyaz Khan</h4>
               <p class="position">Team Leader</p>
               <p class="description">
-                Shahroze Ayyaz Khan is our inspiring leader, guiding us with his passion and dedication. He created our homepage and contact page, making sure they are welcoming and easy to navigate.
+                Shahroze Ayyaz Khan is our inspiring leader, guiding us with his
+                passion and dedication. He created our homepage and contact
+                page, making sure they are welcoming and easy to navigate.
               </p>
             </div>
           </div>
         </div>
 
-        <div class="col-md-4 mb-4 wow animate__animated animate__zoomIn" data-wow-delay="0.7s">
-          <div class="card team-card">
-            <img
-              src="./images/teammember.png"
-              class="card-img-top"
-              alt="Team Member 2"
-            />
-            <div class="card-body text-center">
-              <h4 class="card-title">Sarmad Khan</h4>
-              <p class="position">Team Member</p>
-              <p class="description">
-                Sarmad Khan is the creative mind behind our about and course pages. He tells our story beautifully and helps people understand what we offer so that they can choose their desired course.
-              </p>
-            </div>
-          </div>
-        </div>
-       
-        <div class="col-md-4 mb-4 wow animate__animated animate__zoomIn" data-wow-delay="0.9s">
+        <div
+          class="col-md-6 mb-4 wow animate__animated animate__zoomIn"
+          data-wow-delay="0.9s"
+        >
           <div class="card team-card">
             <img
               src="./images/teammember.png"
@@ -197,80 +184,100 @@
               <h4 class="card-title">Fahad Khan</h4>
               <p class="position">Team Member</p>
               <p class="description">
-                Fahad Khan is our go-to person for making things interactive and fun. He built our gallery and signin/signout pages, ensuring everyone has a smooth and enjoyable experience.
+                Fahad Khan is our go-to person for making things interactive and
+                fun. He built our gallery and signin/signout pages, ensuring
+                everyone has a smooth and enjoyable experience.
               </p>
             </div>
           </div>
         </div>
       </div>
     </div>
+
     <!-- Team Member -->
 
     <!-- Courses -->
     <section id="course">
-      <div class="container mt-5">
-        <h1 class="heading-title wow animate__animated animate__zoomIn" data-wow-delay="0.3s">Popular Courses</h1>
-        <div class="row">
-          <div class="col-md-4 mb-4 wow animate__animated animate__zoomIn" data-wow-delay="0.5s">
+      <div class="container py-5">
+        <h1
+          class="heading-title wow animate__animated animate__zoomIn"
+          data-wow-delay="0.3s"
+        >
+          Popular Courses
+        </h1>
+        <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+          <div
+            class="col wow animate__animated animate__zoomIn"
+            data-wow-delay="0.5s"
+          >
             <div class="card course-card">
               <img
                 src="./images/courses/Web Development.png"
                 class="card-img-top"
-                alt="Web Development"
+                alt="Course 1"
               />
-              <div class="price-circle">Rs 2000</div>
-              <div class="card-body">
-                <h4 class="card-title">Web Development Bootcamp</h4>
-                <p class="description">
+              <div class="price-circle">Rs2000</div>
+              <div class="card-body course-card-body">
+                <h5 class="card-title">Web Development Bootcamp</h5>
+                <p class="card-text">
                   Learn the fundamentals of web development including HTML, CSS,
                   and JavaScript. Build real-world projects and become a web
                   developer.
                 </p>
-                <a href="#" class="btn">Enroll Now</a>
+              </div>
+              <div class="card-footer course-card-footer">
+                <a href="#" class="btn">Learn More</a>
               </div>
             </div>
           </div>
-
-          <div class="col-md-4 mb-4 wow animate__animated animate__zoomIn" data-wow-delay="0.7s">
+          <div
+            class="col wow animate__animated animate__zoomIn"
+            data-wow-delay="0.7s"
+          >
             <div class="card course-card">
               <img
-                src="./images/courses/Project Management Professional.png"
+                src="./images/courses/Cyber Security Fundamentals.png"
                 class="card-img-top"
-                alt="Project Management"
+                alt="Course 2"
               />
-              <div class="price-circle">Rs 3000</div>
-              <div class="card-body">
-                <h4 class="card-title">Project Management Professional</h4>
-                <p class="description">
-                  Prepare for the PMP certification. Learn project management
-                  methodologies, risk management, and project planning.
+              <div class="price-circle">Rs2500</div>
+              <div class="card-body course-card-body">
+                <h5 class="card-title">Cyber Security Fundamentals</h5>
+                <p class="card-text">
+                  Understand the basics of cyber security. Learn about network
+                  security, threat analysis, and how to protect against cyber
+                  threats.
                 </p>
-                <a href="#" class="btn">Enroll Now</a>
+              </div>
+              <div class="card-footer course-card-footer">
+                <a href="#" class="btn">Learn More</a>
               </div>
             </div>
           </div>
-          
-          <div class="col-md-4 mb-4 wow animate__animated animate__zoomIn" data-wow-delay="0.9s">
+          <div
+            class="col wow animate__animated animate__zoomIn"
+            data-wow-delay="0.9s"
+          >
             <div class="card course-card">
               <img
                 src="./images/courses/Graphic Design Essentials.png"
                 class="card-img-top"
-                alt="Graphic Design"
+                alt="Course 3"
               />
-              <div class="price-circle">Rs 2500</div>
-              <div class="card-body">
-                <h4 class="card-title">Graphic Design Essentials</h4>
-                <p class="description">
+              <div class="price-circle">Rs2500</div>
+              <div class="card-body course-card-body">
+                <h5 class="card-title">Graphic Design Essentials</h5>
+                <p class="card-text">
                   Learn the principles of graphic design, including typography,
                   color theory, and digital illustration. Create stunning
                   visuals for various media.
                 </p>
-                <a href="#" class="btn">Enroll Now</a>
+              </div>
+              <div class="card-footer course-card-footer">
+                <a href="#" class="btn">Learn More</a>
               </div>
             </div>
           </div>
-        <div class="text-center mt-5 wow animate__animated animate__zoomIn" data-wow-delay="0.9s">
-          <a href="courses.html" class="btn">View All Courses</a>
         </div>
       </div>
     </section>
@@ -280,23 +287,37 @@
     <!-- How It Works -->
     <section class="how-it-works">
       <div class="container mt-5 text-center">
-        <h1 class="heading-title wow animate__animated animate__zoomIn" data-wow-delay="0.3s">How It Works</h1>
+        <h1
+          class="heading-title wow animate__animated animate__zoomIn"
+          data-wow-delay="0.3s"
+        >
+          How It Works
+        </h1>
         <div class="row">
-          <div class="col-md-4 wow animate__animated animate__zoomIn" data-wow-delay="0.5s">
+          <div
+            class="col-md-4 wow animate__animated animate__zoomIn"
+            data-wow-delay="0.5s"
+          >
             <div class="step-item">
               <div class="step-icon"><i class="fas fa-book-open"></i></div>
               <h3>Step 1</h3>
               <p>Choose your course.</p>
             </div>
           </div>
-          <div class="col-md-4 wow animate__animated animate__zoomIn" data-wow-delay="0.7s">
+          <div
+            class="col-md-4 wow animate__animated animate__zoomIn"
+            data-wow-delay="0.7s"
+          >
             <div class="step-item">
               <div class="step-icon"><i class="fas fa-user-graduate"></i></div>
               <h3>Step 2</h3>
               <p>Enroll and start learning.</p>
             </div>
           </div>
-          <div class="col-md-4 wow animate__animated animate__zoomIn" data-wow-delay="0.9s">
+          <div
+            class="col-md-4 wow animate__animated animate__zoomIn"
+            data-wow-delay="0.9s"
+          >
             <div class="step-item">
               <div class="step-icon"><i class="fas fa-certificate"></i></div>
               <h3>Step 3</h3>
@@ -308,12 +329,23 @@
     </section>
 
     <!-- Testimonials -->
-    <section class="testimonial-section mt-5 wow animate__animated animate__zoomIn" data-wow-delay="0.1s">
+    <section
+      class="testimonial-section mt-5 wow animate__animated animate__zoomIn"
+      data-wow-delay="0.1s"
+    >
       <div class="testimonial-overlay"></div>
       <div class="container testimonial-content">
-        <h1 class="heading-title-light wow animate__animated animate__zoomIn" data-wow-delay="0.3s">Testimonials</h1>
+        <h1
+          class="heading-title-light wow animate__animated animate__zoomIn"
+          data-wow-delay="0.3s"
+        >
+          Testimonials
+        </h1>
         <div class="row">
-          <div class="col-md-4 wow animate__animated animate__zoomIn" data-wow-delay="0.5s">
+          <div
+            class="col-md-4 wow animate__animated animate__zoomIn"
+            data-wow-delay="0.5s"
+          >
             <div class="testimonial-item">
               <img src="./images/male-avator.jpg" alt="Person 1" />
               <blockquote>
@@ -323,7 +355,10 @@
               <cite>John Doe, Web Developer</cite>
             </div>
           </div>
-          <div class="col-md-4 wow animate__animated animate__zoomIn" data-wow-delay="0.7s">
+          <div
+            class="col-md-4 wow animate__animated animate__zoomIn"
+            data-wow-delay="0.7s"
+          >
             <div class="testimonial-item">
               <img src="./images/female-avator.jpg" alt="Person 2" />
               <blockquote>
@@ -333,7 +368,10 @@
               <cite>Jane Smith, Data Scientist</cite>
             </div>
           </div>
-          <div class="col-md-4 wow animate__animated animate__zoomIn" data-wow-delay="0.9s">
+          <div
+            class="col-md-4 wow animate__animated animate__zoomIn"
+            data-wow-delay="0.9s"
+          >
             <div class="testimonial-item">
               <img src="/images/male-avator.jpg" alt="Person 3" />
               <blockquote>
@@ -455,35 +493,11 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     ></script>
-        <!--JS Libraries-->
-        <!-- WOW.js -->
+    <!--JS Libraries-->
+    <!-- WOW.js -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
-        <script>
-          new WOW().init();
-      </script>
     <script>
-      $(document).ready(function () {
-        var coursesCount = 10;
-        var studentsCount = 150;
-        var teachersCount = 8;
-
-        // Function to animate counters
-        function animateCounter(id, count) {
-          $({ Counter: 0 }).animate(
-            { Counter: count },
-            {
-              duration: 8000,
-              easing: "swing",
-              step: function () {
-                $("#" + id).text(Math.ceil(this.Counter) + "+");
-              },
-            }
-          );
-        }
-        animateCounter("courses", coursesCount);
-        animateCounter("students", studentsCount);
-        animateCounter("teachers", teachersCount);
-      });
+      new WOW().init();
     </script>
   </body>
 </html>
