--- a/gallery.html
+++ b/gallery.html
@@ -33,6 +33,36 @@
     <!-- Title Logo -->
     <link rel="icon" href="./images/mini-logo.png" type="image/x-icon" />
     <title>Gallery | IlmZar</title>
+    <!-- Font Awesome CDN -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+      integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <!-- Bootstrap CDN -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <!-- Animate.css -->
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/gallery.css" />
+    <!-- Title Logo -->
+    <link rel="icon" href="./images/mini-logo.png" type="image/x-icon" />
+    <title>Gallery | IlmZar</title>
   </head>
 
   <body>
@@ -115,23 +145,6 @@
           </div>
         </div>
       </div>
-<<<<<<< HEAD
-=======
-      <nav>
-        <div
-          class="container wow animate__animated animate__slideInDown"
-          data-wow-delay="0.5s"
-        >
-          <ol>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="courses.html">Courses</a></li>
-            <li><a href="gallery.html" class="fw-bold active">Gallery</a></li>
-            <li><a href="contact.html">Contact</a></li>
-          </ol>
-        </div>
-      </nav>
->>>>>>> 7821a14eace385cc084be47c737c00e3e184a3f6
     </div>
     <!-- Breadcrumbs End -->
     <!-- Gallery Start -->
