--- a/signin.html
+++ b/signin.html
@@ -23,6 +23,26 @@
     <!-- Title Logo -->
     <link rel="icon" href="./images/mini-logo.png" type="image/x-icon" />
     <title>Sign In | IlmZar</title>
+    <!-- FontAwesome CDN -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+      integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <!-- Custom CSS -->
+    <link href="./css/signin.css" rel="stylesheet" />
+    <!-- Title Logo -->
+    <link rel="icon" href="./images/mini-logo.png" type="image/x-icon" />
+    <title>Sign In | IlmZar</title>
   </head>
   <body>
     <div class="wrapper">
@@ -45,11 +65,7 @@
           <a href="#">Forget Password</a>
         </div>
 
-<<<<<<< HEAD
         <a href="index.html" class="btn">Sign In</a>
-=======
-        <button type="submit" class="btn">Login</button>
->>>>>>> 7821a14eace385cc084be47c737c00e3e184a3f6
 
         <div class="register-link">
           <p>Don't have an account? <a href="signup.html">Register</a></p>
