--- a/about.html
+++ b/about.html
@@ -169,75 +169,76 @@
           </div>
         </div>
 
-        <h2
-          class="heading-title mt-5 wow animate__animated animate__zoomIn"
-          data-wow-delay="0.3s"
-        >
-          What We Offer
-        </h2>
-        <div class="row">
-          <div
-            class="col-md-6 col-lg-3 mb-4 wow animate__animated animate__zoomIn"
-            data-wow-delay="0.5s"
+         <div class="container mt-5">
+          <h2
+            class="heading-title mt-5 wow animate__animated animate__zoomIn"
+            data-wow-delay="0.3s"
           >
-            <div class="card about-card">
-              <div class="card-body">
-                <h4>Wide Range of Courses</h4>
-                <p>
-                  From academic subjects to professional development, we offer
-                  courses in various fields such as business, technology, arts,
-                  and sciences.
-                </p>
+            What We Offer
+          </h2>
+          <div class="row">
+            <div
+              class="col-md-6 col-lg-3 mb-4 wow animate__animated animate__zoomIn"
+              data-wow-delay="0.5s"
+            >
+              <div class="card offer-card">
+                <div class="body-card">
+                  <h4>Wide Range of Courses</h4>
+                  <p>
+                    From academic subjects to professional development, we offer
+                    courses in various fields such as business, technology,
+                    arts, and sciences.
+                  </p>
+                </div>
               </div>
             </div>
-          </div>
-          <div
-            class="col-md-6 col-lg-3 mb-4 wow animate__animated animate__zoomIn"
-            data-wow-delay="0.5s"
-          >
-            <div class="card about-card">
-              <div class="card-body">
-                <h4>Expert Instructors</h4>
-                <p>
-                  Our courses are taught by experienced and qualified
-                  instructors who are passionate about teaching and dedicated to
-                  helping you succeed.
-                </p>
+            <div
+              class="col-md-6 col-lg-3 mb-4 wow animate__animated animate__zoomIn"
+              data-wow-delay="0.5s"
+            >
+              <div class="card offer-card">
+                <div class="body-card">
+                  <h4>Expert Instructors</h4>
+                  <p>
+                    Our courses are taught by experienced and qualified
+                    instructors who are passionate about teaching and dedicated
+                    to helping you succeed.
+                  </p>
+                </div>
               </div>
             </div>
-          </div>
-          <div
-            class="col-md-6 col-lg-3 mb-4 wow animate__animated animate__zoomIn"
-            data-wow-delay="0.5s"
-          >
-            <div class="card about-card">
-              <div class="card-body">
-                <h4>Flexible Learning</h4>
-                <p>
-                  Study at your own pace and convenience with our flexible
-                  online learning options. Access course materials anytime,
-                  anywhere.
-                </p>
+            <div
+              class="col-md-6 col-lg-3 mb-4 wow animate__animated animate__zoomIn"
+              data-wow-delay="0.5s"
+            >
+              <div class="card offer-card">
+                <div class="body-card">
+                  <h4>Flexible Learning</h4>
+                  <p>
+                    Study at your own pace and convenience with our flexible
+                    online learning options. Access course materials anytime,
+                    anywhere.
+                  </p>
+                </div>
               </div>
             </div>
-          </div>
-          <div
-            class="col-md-6 col-lg-3 mb-4 wow animate__animated animate__zoomIn"
-            data-wow-delay="0.5s"
-          >
-            <div class="card about-card">
-              <div class="card-body">
-                <h4>Community Support</h4>
-                <p>
-                  Join a vibrant community of learners and educators. Engage in
-                  discussions, collaborate on projects, and build lasting
-                  connections.
-                </p>
+            <div
+              class="col-md-6 col-lg-3 mb-4 wow animate__animated animate__zoomIn"
+              data-wow-delay="0.5s"
+            >
+              <div class="card offer-card">
+                <div class="body-card">
+                  <h4>Community Support</h4>
+                  <p>
+                    Join a vibrant community of learners and educators. Engage
+                    in discussions, collaborate on projects, and build lasting
+                    connections.
+                  </p>
+                </div>
               </div>
             </div>
           </div>
         </div>
-
         <div class="container mt-5">
           <h2
             class="heading-title wow animate__animated animate__zoomIn"
