--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
               <p class="position">Team Leader</p>
               <p class="description">
                 Shahroze Ayyaz Khan is our inspiring leader, guiding us with his
-                passion and dedication. He created our homepage and contact
+                passion and dedication. He created our homepage, about, course and contact
                 page, making sure they are welcoming and easy to navigate.
               </p>
             </div>
